--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,14 @@
   color: #61dafb;
 }
 
+.formselect {
+  border-radius: 50px !important; 
+}
+
+.formsearch {
+  border-radius: 50px !important; 
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
