--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 /* .App {
   text-align: center;
 } */
+@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+
+body, html {
+  font-family: 'Kanit', sans-serif !important;
+}
 
 .App-logo {
   height: 40vmin;
